spacing issues fixed

--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -3841,6 +3841,9 @@ padding-left:0px;
 .table.contacts-custom tbody tr td {
       padding: 6px 15px;
 }
+.table.companies-custom thead tr th {
+      padding: 7px 15px;
+}
 .newcontacttabel thead tr th:nth-child(n+3){
   display:none;
 }
